--- a/deco.css
+++ b/deco.css
@@ -7,7 +7,9 @@ body {
 	background-image: url(images/images/bg3.png);
 	background-attachment: fixed;
 }
-
+section {
+	padding-top: 3.5em;
+}
 /*navbar*/
 .navbar-brand img{
 	height: 1.5em;
@@ -18,6 +20,8 @@ body {
 	height: 3.5em;
 	width: 100%;
 	opacity: 1;
+	position: fixed;
+	z-index: 10;
 }
 .navbar-nav{
 	display: none;
